fixed the bug where the player name overflows outside the box when round exceeds 2 digits (e.g. round 10)

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ a {
 }
 
 .playerLabel {
-  font-size: 0.8em;
+  font-size: 0.75em;
   margin-right: 10px;
 }
 .playerLabel1 {
